--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         # sync with gradle/libs.versions.toml
-        agp: [ 8.2.2, 8.3.0-rc02, 8.4.0-alpha10 ]
+        agp: [ 8.3.0, 8.4.0-alpha10 ]
       fail-fast: false
     name: "AGP ${{ matrix.agp }}"
     steps:
