--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,9 @@
 [versions]
-agp = "8.4.0-alpha11"
+agp = "8.2.2"
 kotlin = "1.9.22"
 
 [libraries]
 junit = "junit:junit:4.13.2"
-
-# Fake agp libraries to detect new versions
-gradle-8_3 = { module = "com.android.tools.build:gradle", version = "8.3.0" }
-gradle-8_4 = { module = "com.android.tools.build:gradle", version = "8.4.0-alpha12" }
-gradle-8_5 = { module = "com.android.tools.build:gradle", version = "8.5.0-alpha01" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
