--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
     strategy:
       matrix:
         # sync with gradle/libs.versions.toml
-        agp: [ 8.3.0, 8.4.0-alpha12 ]
+        agp: [ 8.3.0, '' ]
       fail-fast: false
-    name: "AGP ${{ matrix.agp }}"
+    name: "AGP ${{ matrix.agp || 'default' }}"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
