--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           distribution: 'temurin'
       - uses: gradle/actions/setup-gradle@v3
         with:
+          validate-wrappers: true
           gradle-home-cache-cleanup: true
           add-job-summary-as-pr-comment: on-failure
-      - uses: gradle/actions/wrapper-validation@v3
       - run: ./gradlew -Pagp=${{ matrix.agp }} build --continue
