--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        agp: [ 8.4.0, '' ]
+        agp:
+          - "" # default
+          - 8.5.0-beta02
+          - 8.6.0-alpha03
       fail-fast: false
     name: "AGP ${{ matrix.agp || 'default' }}"
     steps:
