--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,17 @@
 [versions]
-agp = "8.5.0-beta02"
+agp = "8.4.1"
 kotlin = "2.0.0"
 
 [libraries]
 junit = "junit:junit:4.13.2"
 stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin"}
+
+#noinspection SimilarGradleDependency
+agp-stable = "com.android.tools.build:gradle:8.4.1"
+#noinspection SimilarGradleDependency
+agp-beta = "com.android.tools.build:gradle:8.5.0-beta02"
+#noinspection SimilarGradleDependency
+agp-alpha = "com.android.tools.build:gradle:8.6.0-alpha03"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
