Update AGP versions

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.2"
+agp = "8.5.0"
 kotlin = "2.0.0"
 
 [libraries]
@@ -7,9 +7,9 @@ junit = "junit:junit:4.13.2"
 stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin"}
 
 #noinspection SimilarGradleDependency
-gha-agp-stable = "com.android.tools.build:gradle:8.4.2"
+gha-agp-stable = "com.android.tools.build:gradle:8.5.0"
 #noinspection SimilarGradleDependency
-gha-agp-beta = "com.android.tools.build:gradle:8.5.0-rc02"
+gha-agp-beta = "com.android.tools.build:gradle:8.6.0-alpha05"
 #noinspection SimilarGradleDependency
 gha-agp-alpha = "com.android.tools.build:gradle:8.6.0-alpha05"
 
